--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -9,17 +9,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
           cache: maven
+
       - name: Build with Maven
         run: mvn -B -DskipTests package
-      - name: Upload artifact
+
+      - name: Inject Main-Class into JAR
+        run: |
+          echo "Main-Class: com.mycompany.addressbook.Main" > MANIFEST.MF
+          echo "Class-Path: ." >> MANIFEST.MF
+          jar umf MANIFEST.MF target/*.jar
+          jar tf target/*.jar | head -n 5
+
+      - name: Upload artifact (JAR ejecutable)
         uses: actions/upload-artifact@v4
         with:
           name: AddressBookJava
           path: target/*.jar
-          if-no-files-found: warn
+          if-no-files-found: error
