--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           distribution: temurin
           java-version: '24'
-          cache: maven
+
+      - name: Install Maven
+        run: sudo apt-get update && sudo apt-get install -y maven
 
       - name: Build with Maven
         run: mvn -B -DskipTests package
@@ -25,7 +27,6 @@ jobs:
           echo "Main-Class: com.mycompany.addressbook.Main" > MANIFEST.MF
           echo "Class-Path: ." >> MANIFEST.MF
           jar umf MANIFEST.MF target/*.jar
-          jar tf target/*.jar | head -n 10
 
       - name: Upload artifact (JAR ejecutable)
         uses: actions/upload-artifact@v4
